fix a layout problem

--- a/styles/safnet.css
+++ b/styles/safnet.css
@@ -158,4 +158,5 @@ li {
 .card-bare {
     padding: 0.5em;
     margin-top: 1em;
+    display: block;
 }
